--- a/example/index.html
+++ b/example/index.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <div id="container">
-      <h1>One simple webpage to convert Protocol Buffers to TypeScript definition files.</h1>
+      <h1>One simple webpage to convert Protocol Buffers to TypeScript definition files</h1>
       <h2 class="error">Error!!!Please check your protobuf!</h2>
       <div class="col">
         Protocol buffer:
