chore: update demo

--- a/example/index.html
+++ b/example/index.html
@@ -2,30 +2,14 @@
 <html>
   <head>
     <title>Protobuf to Typescript</title>
-    <style>
-      body {
-        font-family: Sans-Serif;
-      }
-      h1, h2 {
-        margin: 16px 8px;
-      }
-      .col {
-        width: calc(50% - 16px);
-        float: left;
-        margin: 0 8px;
-      }
-      textarea {
-        width: 100%;
-      }
-      .error {
-        color: red;
-        display: none;
-      }
-    </style>
+    <link rel="stylesheet" href="./index.css">
   </head>
   <body>
+    <header class="header">
+      <a href="./" class="active">Converter</a>
+      <a href="./response.html">Mock</a>
+    </header>
     <div id="container">
-      <h1>Hello World</h1>
       <h2 class="error">Error!!!Please check your protobuf!</h2>
       <div class="col">
         Protocol buffer:
