chore: update example

--- a/example/index.html
+++ b/example/index.html
@@ -12,7 +12,7 @@
     <div id="container">
       <h2 class="error">Error!!!Please check your protobuf!</h2>
       <div class="col">
-        Protocol buffer:
+        <h3>Protocol buffer:</h3>
         <br>
 <textarea name="" id="protobuf" rows="40" oninput="onProtobuf()">
 syntax = "proto3";
@@ -31,7 +31,7 @@ message MyResponse {
 </textarea>
       </div>
       <div class="col">
-        Typescript d.ts:
+        <h3>Typescript d.ts:</h3>
         <br>
         <textarea name="" id="typescript" rows="40"></textarea>
       </div>
