--- a/example/response.html
+++ b/example/response.html
@@ -12,7 +12,7 @@
     <div id="container">
       <h2 class="error">Error!!!Please check your protobuf!</h2>
       <div class="editor">
-        Protocol buffer:
+        <h3>Protocol buffer:</h3>
         <br>
 <textarea name="" id="protobuf" rows="40" oninput="onProtobuf()">
   syntax = "proto3";
@@ -37,12 +37,12 @@
 </textarea>
       </div>
       <div class="selector">
-        Methods:
+        <h3>Methods:</h3>
         <br>
         <ul id="selector"></ul>
       </div>
       <div class="editor">
-        Response Mock Result:
+        <h3>Response Mock Result:</h3>
         <br>
         <textarea name="" id="typescript" rows="40"></textarea>
       </div>
