--- a/example/index.html
+++ b/example/index.html
@@ -37,7 +37,7 @@ message MyResponse {
       </div>
     </div>
     <script src="https://unpkg.com/protobufjs@6.8.8/dist/protobuf.min.js"></script>
-    <script src="../dist/index.umd.js"></script>
+    <script src="../index.umd.js"></script>
     <script>
       function trigger (isShow) {
         document.querySelector('.error').style.display =  isShow ? 'block': 'none';
