chore: update example

--- a/example/response.html
+++ b/example/response.html
@@ -48,7 +48,7 @@
       </div>
     </div>
     <script src="https://unpkg.com/protobufjs@6.8.8/dist/protobuf.min.js"></script>
-    <script src="../index.umd.js"></script>
+    <script src="./index.umd.js"></script>
     <script>
       function trigger (isShow) {
         document.querySelector('.error').style.display =  isShow ? 'block': 'none';
