chore: update example

--- a/example/index.html
+++ b/example/index.html
@@ -7,12 +7,12 @@
   <body>
     <header class="header">
       <a href="./" class="active">Converter</a>
-      <a href="./response.html">Mock</a>
+      <a href="./response.html">Mock Response</a>
     </header>
     <div id="container">
       <h2 class="error">Error!!!Please check your protobuf!</h2>
       <div class="col">
-        <h3>Protocol buffer:</h3>
+        <h3>Protocol buffer</h3>
         <br>
 <textarea name="" id="protobuf" rows="40" oninput="onProtobuf()">
 syntax = "proto3";
@@ -31,7 +31,7 @@ message MyResponse {
 </textarea>
       </div>
       <div class="col">
-        <h3>Typescript d.ts:</h3>
+        <h3>Typescript d.ts</h3>
         <br>
         <textarea name="" id="typescript" rows="40"></textarea>
       </div>
