chore: update example

--- a/example/index.html
+++ b/example/index.html
@@ -8,6 +8,7 @@
     <header class="header">
       <a href="./" class="active">Converter</a>
       <a href="./response.html">Mock Response</a>
+      <a class="github-link" href="https://github.com/brandonxiang/pb-to-typescript">Github</a>
     </header>
     <div id="container">
       <h2 class="error">Error!!!Please check your protobuf!</h2>
