--- a/example/response.html
+++ b/example/response.html
@@ -8,6 +8,7 @@
     <header class="header">
       <a href="./">Converter</a>
       <a href="./response.html" class="active">Mock Response</a>
+      <a class="github-link" href="https://github.com/brandonxiang/pb-to-typescript">Github</a>
     </header>
     <div id="container">
       <h2 class="error">Error!!!Please check your protobuf!</h2>
