--- a/example/index.html
+++ b/example/index.html
@@ -32,7 +32,10 @@ message MyResponse {
 </textarea>
       </div>
       <div class="col">
-        <h3>Typescript d.ts</h3>
+        <select id="type-selector">
+          <option value="1">Typescript d.ts</option>
+          <option value="0">Typescript File</option>
+        </select>
         <br>
         <textarea name="" id="typescript" rows="40"></textarea>
       </div>
@@ -43,18 +46,27 @@ message MyResponse {
       function trigger (isShow) {
         document.querySelector('.error').style.display =  isShow ? 'block': 'none';
       }
-      function onProtobuf() {
+      function onProtobuf(_isDefinition) {
+          var isDefinition = _isDefinition === undefined ? true : _isDefinition;
           var src = document.getElementById("protobuf").value;
-          var ts = pbToTypescript.parseProto('syntax = "proto3";' + src);
+          var ts = pbToTypescript.parseProto('syntax = "proto3";' + src, { isDefinition: isDefinition});
           document.getElementById("typescript").value = ts;
           trigger(false)    
       }
+      
+      function onLoad() {
+        document.querySelector('#type-selector').addEventListener('change', (e) => {
+          onProtobuf(!!+e.target.value);
+        })
+        onProtobuf()
+      }
+     
 
       window.onerror = () => {
         trigger(true)
       }
 
-      onProtobuf()
+      onLoad()
 
     </script>
   </body>
