chore: add json converter

--- a/example/index.html
+++ b/example/index.html
@@ -6,8 +6,9 @@
   </head>
   <body>
     <header class="header">
-      <a href="./" class="active">Converter</a>
-      <a href="./response.html">Mock Response</a>
+      <a href="./" class="active">PB Converter</a>
+      <a href="./response.html">PB Mock</a>
+      <a href="http://www.jsontots.com/">JSON Converter</a>
       <a class="github-link" href="https://github.com/brandonxiang/pb-to-typescript">Github</a>
     </header>
     <div id="container">
