--- a/example/response.html
+++ b/example/response.html
@@ -6,8 +6,9 @@
   </head>
   <body>
     <header class="header">
-      <a href="./">Converter</a>
-      <a href="./response.html" class="active">Mock Response</a>
+      <a href="./">PB Converter</a>
+      <a href="./response.html" class="active">PB Mock</a>
+      <a href="http://www.jsontots.com/">JSON Converter</a>
       <a class="github-link" href="https://github.com/brandonxiang/pb-to-typescript">Github</a>
     </header>
     <div id="container">
