--- a/example/response.html
+++ b/example/response.html
@@ -8,52 +8,51 @@
     <header class="header">
       <a href="./">PB Converter</a>
       <a href="./response.html" class="active">PB Mock</a>
-      <a href="http://www.jsontots.com/">JSON Converter</a>
+      <a href="http://www.jsontots.com/" target="_blank">JSON Converter</a>
       <a class="github-link" href="https://github.com/brandonxiang/pb-to-typescript">Github</a>
     </header>
     <div id="container">
-      <h2 class="error">Error!!!Please check your protobuf!</h2>
       <div class="editor">
         <h3>Protocol buffer</h3>
-        <br>
-<textarea name="" id="protobuf" rows="40" oninput="onProtobuf()">
-  syntax = "proto3";
-  
-  service Greeter {
-      rpc SayHello (HelloRequest) returns (HelloReply) {}
-  }
-  
-  message HelloRequest {
-    string name = 1;
-  }
-  
-  message Teacher {
-    string name = 1;
-  }
-  
-  message HelloReply {
-      string message = 1;
-      number test = 2;
-      Teacher teacher = 3;
-  }
+<textarea name="" id="protobuf" oninput="onProtobuf()">
+syntax = "proto3";
+
+service Greeter {
+    rpc SayHello (HelloRequest) returns (HelloReply) {}
+}
+
+message HelloRequest {
+  string name = 1;
+}
+
+message Teacher {
+  string name = 1;
+}
+
+message HelloReply {
+    string message = 1;
+    number test = 2;
+    Teacher teacher = 3;
+}
 </textarea>
+        <span class="rightcorner warning">Invald Protobuf</span>
       </div>
       <div class="selector">
         <h3>Methods</h3>
-        <br>
         <ul id="selector"></ul>
       </div>
       <div class="editor">
         <h3>Response Mock Result</h3>
-        <br>
-        <textarea name="" id="typescript" rows="40"></textarea>
+        <textarea name="" id="typescript"></textarea>
+        <span class="rightcorner button" data-clipboard-target="#typescript">Copy to clipboard</span>
       </div>
     </div>
     <script src="https://unpkg.com/protobufjs@6.8.8/dist/protobuf.min.js"></script>
+    <script src="https://cdn.bootcss.com/clipboard.js/2.0.4/clipboard.min.js"></script>
     <script src="./index.umd.js"></script>
     <script>
       function trigger (isShow) {
-        document.querySelector('.error').style.display =  isShow ? 'block': 'none';
+        document.querySelector('.warning').style.display =  isShow ? 'block': 'none';
       }
       function onProtobuf() {
           var src = document.getElementById("protobuf").value;
@@ -82,12 +81,15 @@
         trigger(false)    
       }
 
-      window.onerror = () => {
-        trigger(true)
+      function onLoad() {
+        window.onerror = () => {
+          trigger(true)
+        }
+        onProtobuf()
+        new ClipboardJS('.button');
       }
 
-      onProtobuf()
-
+      onLoad();
     </script>
   </body>
 </html>
