--- a/packages/web/app/index.html
+++ b/packages/web/app/index.html
@@ -12,6 +12,12 @@
 
 <body>
 	<div id="app"></div>
-    <script type="module" src="/index/main.js"></script>
+	<script type="module">
+		import App from './index/page.svelte';
+
+		const app = new App({
+			target: document.getElementById('app'),
+		});
+	</script>
 </body>
 </html>
