deploy: 6d9eb0eb58bcf6c5d93d26d8b702fddfcd084e66

--- a/mock/index.html
+++ b/mock/index.html
@@ -8,12 +8,13 @@
 
 	<link rel='icon' type='image/png' href='/static/favicon.png'>
 	<link rel='stylesheet' href='/static/global.css'>
-  <script type="module" crossorigin src="/assets/mock-d4d15055.js"></script>
-  <link rel="modulepreload" crossorigin href="/assets/Navbar-63f86d31.js">
+  <script type="module" crossorigin src="/assets/mock-9aedd8ff.js"></script>
+  <link rel="modulepreload" crossorigin href="/assets/nav-bar-183bf7d4.js">
+  <link rel="modulepreload" crossorigin href="/assets/clipboard-c76970d9.js">
 </head>
 
 <body>
 	<div id="app"></div>
-    
+	
 </body>
 </html>
