--- a/packages/web/app/index.html
+++ b/packages/web/app/index.html
@@ -3,17 +3,20 @@
 <head>
 	<meta charset='utf8'>
 	<meta name='viewport' content='width=device-width'>
-
 	<title>pbts</title>
-
-	<link rel='icon' type='image/png' href='/static/favicon.png'>
-	<link rel='stylesheet' href='/static/global.css'>
+  <%- injectHead %>
+	<script>
+		const darkModeMediaQuery = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)');
+		darkModeMediaQuery.addListener(() => {
+			document.documentElement.classList.add('dark');;
+    });
+	</script>
 </head>
 
 <body>
 	<div id="app"></div>
 	<script type="module">
-		import App from './index/page.svelte';
+		import App from './main.svelte';
 
 		const app = new App({
 			target: document.getElementById('app'),
